[주석 공백 제거]